overflow of greg hooper avatar resolved

--- a/blog-preview-card-main/style.css
+++ b/blog-preview-card-main/style.css
@@ -17,7 +17,6 @@
 .content{
     background-color: hsl(0, 0%, 100%);
     width:22%;
-    height:65%;
     padding:10px;
     border-radius: 25px;
     border:2px solid black;
